# gummi

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  meson.build
cmake/: CompileGResources.cmake  GResource.cmake  gresource.xsl
data/: org.gtk.gummi.gschema.xml
data/ui/: app-menu.ui  gears-menu.ui  panel-list.ui  prefs.ui  window.ui
docs/reference/: Makefile.am  gummi-docs.xml
libgummi/: gummi-collection.c  gummi-collection.h  gummi-view.c  gummi-view.h
src/: Makefile.am  app-win.c  app-win.h  app.c  app.h  context.c  context.h  environment.c  gummi-app.c  gummi-app.h  gummi-commands-file.c  gummi-commands-private.h  gummi-context.c  gummi-context.h  gummi-tab.h  gummi-window.c  gummi-window.h  main.c  plugin-manager.c  plugin-manager.h  prefs.c  prefs.h  project.c  project.h
src/gui/: gui-menu.c  gui-project.c
